# rocketbooth

./: .gitignore  Cargo.toml  KIOSK.md  README.md  Rocketbooth.toml  build.rs  openvg-headers.h  raspi-packages  raspi-packages-deploy  raspi-packages-develop  rocketbooth.cfg  rocketbooth.service
examples/: adjust_params.rs
rocketbooth/: Cargo.toml
rocketbooth-libav/: Cargo.toml  build.rs
rocketbooth-libav/src/: bindings.h  lib.rs  sys.rs
rocketbooth/examples/: config.rs  display_image.rs  display_video.rs  read_video_frames.rs
rocketbooth/src/: config.rs  image_libav.rs  image_sdl2.rs  lib.rs  libav_sdl2.rs  state.rs
rocketbooth/src/state/: context.rs  mod.rs
src/: lib.rs
src/av/: codec.rs  format.rs  mod.rs  scale.rs  sys.rs  util.rs
src/evdev/: mod.rs
src/openvg/: mod.rs  sys.rs
